add github test for message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="header-logo">BoSupLo </div>
       <div class="header-list">
         <ul>
-          <li>プログラミングとは</li>
+          <li>プログラミングとはhahahhahhhahhahah1</li>
           <li>学べるレッスン</li>
           <li>お問い合わせ</li>
         </ul>
